# exame-inline

./: pyproject.toml
backend/: settings.py  urls.py
backend/core/: views.py
backend/core/static/css/: style.css
backend/core/templates/: base.html  index.html
backend/core/templates/includes/: nav.html
backend/exam/: urls.py  views.py
backend/exam/templates/exam/: exam_list.html
