[tool.poetry]
name = "exame-inline"
version = "0.1.0"
description = ""
authors = ["John Costa <johnemcosta@gmail.com>"]
readme = "README.md"
packages = [{include = "exame_inline"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-extensions = "^3.2.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
